--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -178,11 +178,11 @@ windowrulev2 = float, class:(qimgv)
 windowrulev2 = size 50% 50%, class:(qimgv)
 windowrulev2 = center, class:(qimgv)
 
-# Kcalc
-windowrulev2 = center, class:(kcalc)
-windowrulev2 = size 35% 35%, class:(kcalc)
-windowrulev2 = float, class:(kcalc)
-windowrulev2 = workspace special:calc,class:(kcalc)
+# Gnome-Calculator
+windowrulev2 = center, class:(org.gnome.Calculator)
+windowrulev2 = size 28% 35%, class:(org.gnome.Calculator)
+windowrulev2 = float, class:(org.gnome.Calculator)
+windowrulev2 = workspace special:calc,class:(org.gnome.Calculator)
 
 # Protonvpn
 windowrulev2 = center, class:(protonvpn-app)
@@ -249,15 +249,17 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, W, exec, flatpak run com.vivaldi.Vivaldi
 bind = $mainMod, B, exec, ~/.config/scripts/waybarload.sh
 bind = $mainMod, C, exec, ~/.config/scripts/clipboard.sh
-bind = $mainMod, K, exec, pgrep kcalc && hyprctl dispatch togglespecialworkspace calc || kcalc &
+bind = $mainMod, K, exec, pgrep gnome-calculator && hyprctl dispatch togglespecialworkspace calc || gnome-calculator &
 bind = $mainMod, N, exec, pgrep standard-notes && hyprctl dispatch togglespecialworkspace notes || flatpak run org.standardnotes.standardnotes &
 bind = $mainMod, M, exec, pgrep mousepad && hyprctl dispatch togglespecialworkspace mouse || mousepad &
 bind = $mainMod, P, exec, protonvpn-app
 bind = $mainMod, O, exec, $logout
+bind = $mainMod, S, exec, kitty sh -c 'cava'
 bind = $mainMod, mouse:274, togglefloating, 
 bind = $mainMod, up, exec, ~/.config/scripts/brightnessup.sh
 bind = $mainMod, down, exec, ~/.config/scripts/brightnessdown.sh
 bind = $mainMod, ESCAPE, exec, wlogout
+bind = $mainMod ALT, K, exec, kitty
 bind = $mainMod CTRL, Q, killactive,
 bind = $mainMod SHIFT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy
 bind = $mainMod SHIFT, C, exec, ~/.config/scripts/clipboardclear.sh
