--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -142,8 +142,7 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device {
-    name = epic-mouse-v1
+device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
@@ -246,7 +245,7 @@ bind = $mainMod, E, exec, thunar
 bind = $mainMod, A, exec, $menu
 bind = $mainMod, I, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, W, exec, flatpak run com.vivaldi.Vivaldi
+bind = $mainMod, W, exec, vivaldi
 bind = $mainMod, B, exec, ~/.config/scripts/waybarload.sh
 bind = $mainMod, C, exec, ~/.config/scripts/clipboard.sh
 bind = $mainMod, K, exec, pgrep gnome-calculator && hyprctl dispatch togglespecialworkspace calc || gnome-calculator &
